...
        <item quantity="other">last seen %d minutes ago</item>
    </plurals>
    <plurals name="status_last_seen_hours">
        <item quantity="one">last seen %d hour ago</item>
        <item quantity="other">last seen %d hours ago</item>
    </plurals>
    <string name="media_preview_close">Close</string>
    <string name="service_you">You</string>
    <string name="service_someone">Someone</string>
    <string name="service_unknown">Service message</string>
    <string name="service_empty"></string>
    <string name="service_create">%1$s created the group «%2$s»</string>
    <string name="service_title">%1$s changed the group name to «%2$s»</string>
...
    <string name="service_todo_add">Tasks added</string>
    <string name="service_suggested_post">Suggested post</string>
    <string name="service_suggested_post_ok">Suggested post published</string>
    <string name="service_suggested_post_refund">Suggested post refunded</string>
    <string name="service_gift_ton">Grams gift</string>
    <string name="service_suggest_birthday">%1$s suggested a birthday</string>
    <string name="media_caption_expand">Expand caption</string>
    <string name="media_caption_collapse">Collapse caption</string>
    <string name="media_video_play">Play</string>
    <string name="media_video_pause">Pause</string>
    <string name="media_video_mute">Mute</string>
    <string name="media_video_unmute">Unmute</string>
    <string name="media_video_seek">Playback position</string>
    <string name="media_video_back">Back 10 seconds</string>
    <string name="media_video_forward">Forward 10 seconds</string>
    <string name="media_video_error">Unable to play video</string>
    <string name="media_image_error">Unable to open photo</string>
    <string name="media_video_retry">Retry</string>
    <string name="media_sender_unknown">Unknown sender</string>
    <string name="media_viewer_album_item">%1$s %2$d of %3$d, from %4$s, %5$s</string>
    <string name="media_viewer_page_position">%1$d of %2$d</string>
    <string name="media_viewer_page_item">%1$s, %2$s, %3$s, %4$s</string>
    <string name="media_viewer_kind_hdr">%1$s, %2$s</string>
    <string name="media_kind_video_note">video message</string>
    <string name="media_kind_voice">voice message</string>
...
    <string name="media_action_share">Share</string>
    <string name="media_action_save">Save to device</string>
    <string name="media_action_forward">Forward</string>
    <string name="media_action_reply">Reply</string>
    <string name="media_forward_this">Forward this item</string>
    <string name="media_forward_album">Forward all %1$d items</string>
    <string name="media_action_copy_caption">Copy caption</string>
    <string name="media_action_copy_image">Copy image</string>
    <string name="media_action_copy_video">Copy video</string>
    <string name="media_action_copied_image">Image copied</string>
    <string name="media_action_copied_video">Video copied</string>
    <string name="media_action_copy_failed">Could not copy</string>
    <string name="media_action_show_in_chat">Show in chat</string>
    <string name="media_action_open_externally">Open externally</string>
    <string name="media_action_delete">Delete</string>
    <string name="media_more_actions">More actions</string>
    <string name="media_menu_speed">Playback speed %1$s</string>
    <string name="media_menu_loop">Loop this video</string>
    <string name="media_menu_pip">Picture in picture</string>
...
